// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> component should render with correct style when hasBackground is false and hasBorderBottom is false 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  background-color: transparent;
  border-bottom: none;
}

.emotion-0:hover {
  background-color: #F3F3F5;
  box-shadow: 0px 1px 2px 0px rgba(16, 20, 40, 0.05);
}

.emotion-2 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 8px;
  padding: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #131313;
}

.emotion-2:focus-visible {
  outline: 2px solid #000000;
}

.emotion-4 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #131313;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4:hover,
.emotion-4:active {
  color: #00677F;
}

.emotion-6 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  display: grid;
  grid-template-rows: 0fr;
  -webkit-transition: grid-template-rows 0.3s ease-in-out,padding 0.3s ease-in-out;
  transition: grid-template-rows 0.3s ease-in-out,padding 0.3s ease-in-out;
  color: #131313;
  padding: 0 16px 0;
}

.emotion-6>div {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="accordion-container"
  >
    <header
      aria-disabled="false"
      class="emotion-2 emotion-3"
      data-testid="accordion-header"
      role="button"
      tabindex="0"
    >
      Header Content
      <i
        class="emotion-4 emotion-5"
        color="#131313"
        data-testid="icon"
      >
        unfold_more
      </i>
    </header>
    <div
      aria-expanded="false"
      class="emotion-6 emotion-7"
      data-testid="accordion-body"
    >
      <div>
        <div>
          Body Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> component should render with correct style when hasBackground is true and hasBorderBottom is true 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  background-color: #FAFAFA;
  border-bottom: 1px solid #DEDEDE;
}

.emotion-0:hover {
  background-color: #F3F3F5;
  box-shadow: 0px 1px 2px 0px rgba(16, 20, 40, 0.05);
}

.emotion-2 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 8px;
  padding: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #131313;
}

.emotion-2:focus-visible {
  outline: 2px solid #000000;
}

.emotion-4 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #131313;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4:hover,
.emotion-4:active {
  color: #00677F;
}

.emotion-6 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  display: grid;
  grid-template-rows: 0fr;
  -webkit-transition: grid-template-rows 0.3s ease-in-out,padding 0.3s ease-in-out;
  transition: grid-template-rows 0.3s ease-in-out,padding 0.3s ease-in-out;
  color: #131313;
  padding: 0 16px 0;
}

.emotion-6>div {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="accordion-container"
  >
    <header
      aria-disabled="false"
      class="emotion-2 emotion-3"
      data-testid="accordion-header"
      role="button"
      tabindex="0"
    >
      Header Content
      <i
        class="emotion-4 emotion-5"
        color="#131313"
        data-testid="icon"
      >
        unfold_more
      </i>
    </header>
    <div
      aria-expanded="false"
      class="emotion-6 emotion-7"
      data-testid="accordion-body"
    >
      <div>
        <div>
          Body Content
        </div>
      </div>
    </div>
  </div>
</div>
`;
